--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-      "target": "es6",            /* Specify ECMAScript target version */
+      "target": "ES6",            /* Specify ECMAScript target version */
       "module": "commonjs",       /* Specify module code generation */
       "sourceMap": true,          /* Generates corresponding '.map' file. */
       "outDir": "./build",        /* Redirect output structure to the directory. */
@@ -8,6 +8,7 @@
       "removeComments": true,     /* Do not emit comments to output. */
       "noImplicitAny": true,      /* Raise error on declarations with an implied 'any' type. */
       "noEmitOnError": true,        /* Disable emitting files if any type checking errors are reported. */
-      "esModuleInterop": true 
+      "esModuleInterop": true,
+      "strict": true
    }
 }
